FIXED bug que provocaba que el nav-bar se superpusiese con la pagina debido al overflow-scroll

--- a/src/app/components/nav/nav-encargado/nav-encargado.component.css
+++ b/src/app/components/nav/nav-encargado/nav-encargado.component.css
@@ -5,6 +5,7 @@
 }
 
 #sidebar {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -15,6 +16,7 @@
 }
 
 #toggler {
+    z-index: 1;
     padding-top: 20px;
     padding-left: 10px;
     padding-bottom: 10px;
